[gd_scene load_steps=3 format=3 uid="uid://qsmbu820q3r8"]

[ext_resource type="Script" path="res://HUD.gd" id="1_j57pe"]
[ext_resource type="FontFile" uid="uid://b8rrc54h30bch" path="res://fonts/Xolonium-Regular.ttf" id="2_0m5os"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_j57pe")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -117.5
offset_top = 50.0
offset_right = 117.5
offset_bottom = 128.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_0m5os")
theme_override_font_sizes/font_size = 64
text = "0
"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
custom_minimum_size = Vector2(480, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -11.5
offset_right = 240.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_0m5os")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 100)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -198.0
offset_right = 100.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_0m5os")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 149.0
offset_bottom = 93.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 129.0
offset_bottom = 73.0
color = Color(0.125911, 0.125911, 0.125911, 0.443137)

[node name="X_label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 6.0
offset_right = 20.0
offset_bottom = 23.0
text = "x:"

[node name="X_value" type="Label" parent="Control"]
layout_mode = 0
offset_left = 23.0
offset_right = 104.0
offset_bottom = 23.0
text = "100
"

[node name="Y_label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 6.0
offset_top = 23.0
offset_right = 20.0
offset_bottom = 46.0
text = "y:"

[node name="Y_value" type="Label" parent="Control"]
layout_mode = 0
offset_left = 23.0
offset_top = 23.0
offset_right = 104.0
offset_bottom = 46.0
text = "100"

[node name="Z_label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 6.0
offset_top = 46.0
offset_right = 20.0
offset_bottom = 69.0
text = "z:"

[node name="Z_value" type="Label" parent="Control"]
layout_mode = 0
offset_left = 23.0
offset_top = 46.0
offset_right = 104.0
offset_bottom = 69.0
text = "100"

[node name="Button" type="Button" parent="."]
offset_left = 155.0
offset_top = 43.0
offset_right = 181.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("2_0m5os")
theme_override_font_sizes/font_size = 17
text = "+"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
